# talon

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  release-please-config.json  renovate.json5
.github/: dependabot.yml
.github/workflows/: ci.yml  draft-build.yml  release-please.yml  release.yml
app/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
app/icons/: icon.icns
app/src/: agent.rs  commands.rs  lib.rs  proxy_handle.rs  wire.rs  wire_bus.rs
app/src/commands/: core.rs  mod.rs  replay.rs  scope.rs  search.rs
crates/bk-agent/: CHANGELOG.md  Cargo.toml
crates/bk-agent/src/: config.rs  error.rs  events.rs  lib.rs  loop.rs  prompt.rs  tools.rs
crates/bk-agent/tests/: agent_loop_e2e.rs
crates/bk-core/: CHANGELOG.md  Cargo.toml
crates/bk-core/src/: error.rs  filter.rs  ids.rs  lib.rs  model.rs  project.rs  scope.rs  tag.rs
crates/bk-engine/: CHANGELOG.md  Cargo.toml
crates/bk-engine/src/: engine.rs  error.rs  events.rs  lib.rs  mcp_events.rs  projects.rs
crates/bk-engine/tests/: capture_loop_smoke.rs  capture_pipeline.rs  v0_5_cleanup.rs
crates/bk-events/: CHANGELOG.md  Cargo.toml
crates/bk-events/src/: fan_in.rs  lib.rs
crates/bk-mcp/: CHANGELOG.md  Cargo.toml
crates/bk-mcp/src/: error.rs  lib.rs  main.rs  server.rs  tools.rs
crates/bk-proxy/: CHANGELOG.md  Cargo.toml
crates/bk-proxy/src/: ca.rs  cli.rs  config.rs  events.rs  lib.rs  listener.rs  main.rs  match_replace.rs  mitm.rs  pipeline.rs  scope.rs  upstream.rs  upstream_pool.rs
crates/bk-proxy/tests/: h2_pool.rs  mitm_roundtrip.rs  replay_pipeline.rs  scope_and_replace.rs
crates/bk-proxy/tests/common/: mod.rs
crates/bk-server/: Cargo.toml
crates/bk-server/src/: auth.rs  error.rs  handlers.rs  lib.rs  mdns.rs  routes.rs  state.rs  tls.rs  ws.rs
crates/bk-server/tests/: auth.rs  mdns.rs  routing.rs  security.rs  spa_fallback.rs  tls.rs  ws_proxy.rs
crates/bk-store/: CHANGELOG.md  Cargo.toml
crates/bk-store/src/: db.rs  error.rs  exchanges.rs  fts.rs  lib.rs  migrations.rs  projects.rs  replay_history.rs  schema.rs  tags.rs
docs/: architecture.md  dependency-upgrade-plan.md  developer.md  release-process.md  requirements.md
docs/adr/: 0001-supply-chain-monitoring.md
ui/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  api.ts  test-setup.ts
ui/src/components/: AgentPanel.test.tsx  AgentPanel.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DecoderPanel.test.tsx  DecoderPanel.tsx  DiffPanel.test.tsx  DiffPanel.tsx  ExchangeDetail.test.tsx  ExchangeDetail.tsx  ExchangeList.test.tsx  ExchangeList.tsx  InspectorPanel.test.tsx  InspectorPanel.tsx  JsonTreeView.test.tsx  JsonTreeView.tsx  MatchReplaceEditor.test.tsx  MatchReplaceEditor.tsx  NewProjectModal.test.tsx  NewProjectModal.tsx  NotesPanel.tsx  ProxyControl.test.tsx  ProxyControl.tsx  ReplayHistoryPanel.test.tsx  ReplayHistoryPanel.tsx  ReplayRequestEditor.test.tsx  ReplayRequestEditor.tsx  ReplayResponseViewer.tsx  ReplayTabBar.tsx  ReplayView.test.tsx  ReplayView.tsx  RequestInspector.test.tsx  RequestInspector.tsx  ResponseInspector.tsx  RightRail.tsx  ScopeRuleEditor.test.tsx  ScopeRuleEditor.tsx  SettingsModal.test.tsx  SettingsModal.tsx
ui/src/lib/: body-decode.ts  form_data.test.ts  form_data.ts  hex-viewer.test.tsx  hex-viewer.tsx  host_validation.test.ts  host_validation.ts  match_replace.test.ts  match_replace.ts  scope_bulk_import.test.ts  scope_bulk_import.ts  ws.test.ts  ws.ts
ui/src/routes/: Capture.test.tsx  Capture.tsx
ui/src/state/: agent.test.tsx  agent.ts  exchange.test.tsx  exchange.ts  project.test.ts  project.ts  proxy.test.ts  proxy.ts  replay.test.ts  replay.ts  search.test.tsx  ui.ts  ws.test.ts  ws.ts
ui/src/styles/: globals.css
ui/src/types/: agent.ts  domain.ts  ids.ts
