[workspace]
resolver = "2"
# Members added per-phase.
#   - bk-core: Phase 1.2 (workspace scaffold, trivial lib)
#   - app:     Phase 1.3 (Tauri 2 binary, named `talon`)
# Future crates (bk-store, bk-proxy, bk-fuzzer, bk-server) get added in
# their respective phases. The plan deliberately keeps the workspace small
# at each step so cold builds stay fast.
members = [
    "crates/bk-core",
    "crates/bk-store",
    "crates/bk-engine",
    "crates/bk-proxy",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/pedro-tramontin/talon"
authors = ["Pedro Tramontin"]

[workspace.dependencies]
# Internal
bk-core = { path = "crates/bk-core" }
bk-store = { path = "crates/bk-store" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Tauri (only used by the `app` crate, but version-pinned here)
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0", features = [] }

# Misc
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP model
http = "1.1"
url = { version = "2.5", features = ["serde"] }
bytes = { version = "1.7", features = ["serde"] }

# Regex
regex = "1.10"

# Connection pool (for bk-store)
r2d2 = "0.8"

# CA generation (used by bk-proxy for dynamic root + leaf signing)
rcgen = "0.14"

# Config file parsing (used by bk-proxy)
toml = "0.8"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
webpki = "0.22"
webpki-roots = "0.26"

# HTTP client/server (used by bk-proxy for MITM)
hyper = { version = "1.5", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tower-service = "0.3"

# Cert fingerprinting (used by bk-proxy for the CA fingerprint)
sha2 = "0.10"

# Date handling (used by rcgen for cert validity)
time = { version = "0.3", features = ["std"] }

[profile.release]
lto = "thin"           # good size/speed tradeoff, fast link
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true
