[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Talon desktop binary (Tauri 2 shell + IPC commands)"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talon"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bk-core = { workspace = true }
bk-agent = { path = "../crates/bk-agent" }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# `test-util` enables the `start_paused` knob on the current-thread
# runtime; it's a dev-only feature, so it lives here.
tokio = { version = "1.40", features = ["test-util"] }

[features]
# Default: production. Custom protocol is required for Tauri 2 on Linux.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
