[package]
name = "app"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Talon desktop binary (Tauri 2 shell + IPC commands)"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talon"
# Desktop entry (Windows, macOS, Linux). When iOS / Android
# support lands, Tauri 2's `cargo tauri ios init` /
# `cargo tauri android init` generate the platform entry
# points from the `mobile_entry_point` attribute on
# `app_lib::run()` — no `bin/ios.rs` or `bin/android.rs` is
# needed here.
path = "src/bin/desktop.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bk-core = { workspace = true }
bk-events = { workspace = true }
bk-engine = { workspace = true }
bk-proxy = { workspace = true }
bk-agent = { path = "../crates/bk-agent" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "6.0"
tempfile = "3.10"
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }

[dev-dependencies]
bk-store = { workspace = true }
# `test-util` is included in the workspace `tokio` `full` feature set,
# so a bare `workspace = true` re-export is enough.

[features]
# Default: production. Custom protocol is required for Tauri 2 on Linux.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
