[package]
name = "bk-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Internal LLM agent loop that drives bk-engine via OpenAI-compatible tool calls"

[dependencies]
bk-core = { workspace = true }
bk-engine = { workspace = true }
bk-store = { workspace = true }
bk-mcp = { workspace = true }
async-openai = { version = "0.41.1", features = ["chat-completion"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6.5"
