[package]
name = "bk-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Talon core types: HTTP exchange, errors, identifiers. Used by every other crate."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes_base64 = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
# Test-only deps would go here
