[package]
name = "bk-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bk-core = { workspace = true }
bk-store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
