[package]
name = "bk-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bk-core = { workspace = true }
bk-store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Tests construct `HttpExchange` literals with `chrono::Utc::now()` and
# use `tempfile::TempDir` for an isolated engine config dir. Production
# code doesn't need either, so they live in dev-deps only.
chrono = { workspace = true }
tempfile = "3.10"

# Force the integration test in tests/ to use edition 2021.
# Without this, `async fn` and modern syntax fail with E0670
# (treated as edition 2015).
[[test]]
name = "capture_loop_smoke"
path = "tests/capture_loop_smoke.rs"
edition = "2021"
