[package]
name = "bk-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Talon MITM proxy: TCP listener, CA, HTTP/1+2 interception, and pipeline orchestration."

[lib]
name = "bk_proxy"
path = "src/lib.rs"

[[bin]]
name = "bk-proxy"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[dependencies]
bk-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }

# Config file parsing (used by bk-proxy)
toml = "0.8"

[dev-dependencies]
# (none — all §3.1 tests live in lib.rs::tests)
