[package]
name = "bk-proxy"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Talon MITM proxy: TCP listener, CA, HTTP/1+2 interception, and pipeline orchestration."

[lib]
name = "bk_proxy"
path = "src/lib.rs"

[[bin]]
name = "bk-proxy"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[dependencies]
bk-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
rcgen = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki = { workspace = true }
webpki-roots = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tower-service = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }

[dev-dependencies]
x509-parser = "0.16"
tempfile = "3"
bk-engine = { workspace = true }
bk-store = { workspace = true }
