[package]
name = "bk-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Browser-access mode HTTP/WS server for Talon"

[dependencies]
bk-core = { workspace = true }
bk-store = { workspace = true }
bk-engine = { workspace = true }
bk-events = { workspace = true }
bk-proxy = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
mdns-sd = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
async-trait = "0.1"
dirs = "6.0"
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-tungstenite = "0.21"
futures = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
