[package]
name = "bk-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bk-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
